--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>IgniScore</title>
+<style type="text/css">
+	edit{
+		height:50%;
+		width:100%;
+		position:absolute;
+	}
+	body{
+		margin:0;
+	}
+</style>
 </head>
 
 <body>
